Fix Responsive buttom scroll bar, change cover position responsive, text color, dark mode button text switch

--- a/style/style.scss
+++ b/style/style.scss
@@ -20,8 +20,10 @@ body{
     .header{
         width: 100%;
         height: 100vh;
+
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
         background-image: url('./Cover.jpg');
         transition: 0.5s;
     
@@ -87,8 +89,10 @@ body{
     
         .button-main{
             .button{
+                width: 120px;
+                height: 50px;
                 border: none;
-                padding: 15px;
+                // padding: 15px;
                 cursor: pointer;
                 font-size: 15px;
                 font-weight: Bold;
@@ -106,7 +110,7 @@ body{
         .content-header{
             .title{
                 text-align: center;
-                height: 900px;
+                height: 100vh;
                 
                 display: flex;
                 flex-direction: column;
@@ -141,7 +145,7 @@ body{
     
     // Body---------------------------------------------------------------------------------------------
     .body-content{
-    
+        overflow-x: hidden;
         // Service-------------------------------------------------------------------------------------
         .service{
             .title{
@@ -358,6 +362,7 @@ body{
         width: 70%;
         margin: auto;
         padding: 50px 0;
+        
     
         h1{
             text-align: center;
@@ -369,6 +374,7 @@ body{
             margin: auto;
             display: flex;
             justify-content: space-between;
+            
         }
     
         p{
@@ -447,11 +453,11 @@ footer{
             .title{
                 color: var(--fourth);
                 transition: 0.5s;
-            }
-
-            h1{
-                color: var(--fourth);
-                transition: 0.5s;
+            
+                h1{
+                    color: var(--fourth);
+                    transition: 0.5s;
+                }
             }
         }
 
@@ -494,7 +500,7 @@ footer{
 }
 
 // responsive-----------------------------------------------------------------------------------
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 800px){
 
     body{
         .header{
@@ -581,7 +587,10 @@ footer{
     
             .image{
                 width: 100%;
-                margin: auto;
+                // margin: auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
 
                 img{
                     margin: 50px 0;
@@ -620,9 +629,11 @@ footer{
         }
     
         .company-contact{
+            overflow-x: hidden;
+
             .option{
                 display: block;
-                align-items: center;
+                text-align: center;
             }
         }    
     }
@@ -630,6 +641,7 @@ footer{
     footer{
         .navigation{
             display: block;
+            overflow-x: hidden;
 
             .logo{
                 margin: 15px 0px;
@@ -641,20 +653,6 @@ footer{
             .copy-right{
                 font-size: 15px;
             }
-        }
-    }
-}
-
-@media only screen and (max-width: 500px){
-    body{
-        .body-content{
-            display: block;
-        }
-    }
-
-    footer{
-        .navigation{
-            display: block;
         }
     }
 }
